start.spring.io anchor

--- a/slide.html
+++ b/slide.html
@@ -407,7 +407,7 @@
                 <h4>🔬 Lab: Create First Project</h4>
                 <div class="lab-steps">
                   <ol>
-                    <li>Visit start.spring.io in browser</li>
+                    <li>Visit <a href="https://start.spring.io">start.spring.io</a> in browser</li>
                     <li>
                       Select:
                       <ul style="font-size: 0.7em">
