Moved prerequisites to website

--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
     <h1>Full stack workshop</h1>
+    <h2>Prerequisits</h2>
+    <p>Follow a java fundamentals course
+        <a href="https://www.w3schools.com/java/">Java tutorial at w3c schools</a>
+    </p>
+    <p>Take a git course
+        <a href="https://youtube.com/playlist?list=PLTZYG7bZ1u6qck0rYNHO2Yfjzq5ZRRTCe&si=5L21ee3hmwsESSb4/">Youtube Git tutorial by Google</a>
+    </p>
+    <h2>Workshop materials</h2>
     <il>
         <li><a href="slide.html">Presentation</a></li>
         <li><a href="Full-Stack_Architecture_Diagram.html">Full-Stack Architecture Diagram</a></li>
